--- a/package.json
+++ b/package.json
@@ -8,18 +8,27 @@
     "angular-classic:serve": "npx nx serve angular-classic",
     "angular-classic:serve-static": "npx nx serve-static angular-classic",
     "angular-classic:test-performance": "npx nx test-performance angular-classic",
+    "angular-classic:test-performance:windows": "npx nx test-performance-windows angular-classic",
     "angular-zoneless:build": "npx nx build angular-zoneless",
     "angular-zoneless:serve": "npx nx serve angular-zoneless",
     "angular-zoneless:serve-static": "npx nx serve-static angular-zoneless",
     "angular-zoneless:test-performance": "npx nx test-performance angular-zoneless",
+    "angular-zoneless:test-performance:windows": "npx nx test-performance-windows angular-zoneless",
     "angular-zoneless-signal:build": "npx nx build angular-zoneless-signal",
     "angular-zoneless-signal:serve": "npx nx serve angular-zoneless-signal",
     "angular-zoneless-signal:serve-static": "npx nx serve-static angular-zoneless-signal",
     "angular-zoneless-signal:test-performance": "npx nx test-performance angular-zoneless-signal",
+    "angular-zoneless-signal:test-performance:windows": "npx nx test-performance-windows angular-zoneless-signal",
     "angular-zoneless-signal-standalone:build": "npx nx build angular-zoneless-signal-standalone",
     "angular-zoneless-signal-standalone:serve": "npx nx serve angular-zoneless-signal-standalone",
     "angular-zoneless-signal-standalone:serve-static": "npx nx serve-static angular-zoneless-signal-standalone",
-    "angular-zoneless-signal-standalone:test-performance": "npx nx test-performance angular-zoneless-signal-standalone"
+    "angular-zoneless-signal-standalone:test-performance": "npx nx test-performance angular-zoneless-signal-standalone",
+    "angular-zoneless-signal-standalone:test-performance:windows": "npx nx test-performance-windows angular-zoneless-signal-standalone",
+    "angular-zoneless-signal-standalone-on-push:build": "npx nx build angular-zoneless-signal-standalone-on-push",
+    "angular-zoneless-signal-standalone-on-push:serve": "npx nx serve angular-zoneless-signal-standalone-on-push",
+    "angular-zoneless-signal-standalone-on-push:serve-static": "npx nx serve-static angular-zoneless-signal-standalone-on-push",
+    "angular-zoneless-signal-standalone-on-push:test-performance": "npx nx test-performance angular-zoneless-signal-standalone-on-push",
+    "angular-zoneless-signal-standalone-on-push:test-performance:windows": "npx nx test-performance-windows angular-zoneless-signal-standalone-on-push"
   },
   "private": true,
   "dependencies": {
@@ -66,7 +75,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "lighthouse": "^12.2.1",
-    "nx": "20.0.0",
+    "nx": "20.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
