--- a/apps/angular-zoneless-signal-standalone/project.json
+++ b/apps/angular-zoneless-signal-standalone/project.json
@@ -86,9 +86,22 @@
       "options": {
         "commands": [
           "mkdir -p ./dist/lighthouse/angular-zoneless-signal-standalone",
-          "lighthouse http://localhost:4200 --output-path ./dist/lighthouse/angular-zoneless-signal-standalone/product-list-page-report.html --output json --output html",
-          "lighthouse http://localhost:4200/cart --output-path ./dist/lighthouse/angular-zoneless-signal-standalone/cart-page-report.html --output json --output html",
-          "lighthouse http://localhost:4200/shipping --output-path ./dist/lighthouse/angular-zoneless-signal-standalone/shipping-page-report.html --output json --output html"
+          "lighthouse http://localhost:4200 --chrome-flags=\"--headless\" --output-path ./dist/lighthouse/angular-zoneless-signal-standalone/product-list-page-report.html --output json --output html",
+          "lighthouse http://localhost:4200/cart --chrome-flags=\"--headless\" --output-path ./dist/lighthouse/angular-zoneless-signal-standalone/cart-page-report.html --output json --output html",
+          "lighthouse http://localhost:4200/shipping --chrome-flags=\"--headless\" --output-path ./dist/lighthouse/angular-zoneless-signal-standalone/shipping-page-report.html --output json --output html"
+        ],
+        "parallel": false
+      }
+    },
+    "test-performance-windows": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "if not exist .\\dist\\lighthouse mkdir .\\dist\\lighthouse",
+          "if not exist .\\dist\\lighthouse\\angular-zoneless-signal-standalone mkdir .\\dist\\lighthouse\\angular-zoneless-signal-standalone",
+          "lighthouse http://localhost:4200 --chrome-flags=\"--headless\" --output-path .\\dist\\lighthouse\\angular-zoneless-signal-standalone\\product-list-page-report.html --output json --output html",
+          "lighthouse http://localhost:4200/cart --chrome-flags=\"--headless\" --output-path .\\dist\\lighthouse\\angular-zoneless-signal-standalone\\cart-page-report.html --output json --output html",
+          "lighthouse http://localhost:4200/shipping --chrome-flags=\"--headless\" --output-path .\\dist\\lighthouse\\angular-zoneless-signal-standalone\\shipping-page-report.html --output json --output html"
         ],
         "parallel": false
       }
