--- a/package.json
+++ b/package.json
@@ -31,56 +31,62 @@
     "angular-zoneless-signal-standalone-on-push:test-performance:windows": "npx nx test-performance-windows angular-zoneless-signal-standalone-on-push"
   },
   "private": true,
+  "overrides": {
+    "@nx/webpack": {
+      "stylus": "0.0.1-security"
+    }
+  },
   "dependencies": {
-    "@angular/animations": "19.2.9",
-    "@angular/common": "19.2.9",
-    "@angular/compiler": "19.2.9",
-    "@angular/core": "19.2.9",
-    "@angular/forms": "19.2.9",
-    "@angular/platform-browser": "19.2.9",
-    "@angular/platform-browser-dynamic": "19.2.9",
-    "@angular/router": "19.2.9",
+    "@angular/animations": "20.0.0",
+    "@angular/common": "20.0.0",
+    "@angular/compiler": "20.0.0",
+    "@angular/core": "20.0.0",
+    "@angular/forms": "20.0.0",
+    "@angular/platform-browser": "20.0.0",
+    "@angular/platform-browser-dynamic": "20.0.0",
+    "@angular/router": "20.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.9",
-    "@angular-devkit/core": "19.2.9",
-    "@angular-devkit/schematics": "19.2.9",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "19.2.9",
-    "@angular/language-service": "19.2.9",
+    "@angular-devkit/build-angular": "20.0.0",
+    "@angular-devkit/core": "20.0.0",
+    "@angular-devkit/schematics": "20.0.0",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.0",
+    "@angular/language-service": "20.0.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.5.0",
-    "@nx/cypress": "20.5.0",
-    "@nx/eslint": "20.5.0",
-    "@nx/eslint-plugin": "20.5.0",
-    "@nx/jest": "20.5.0",
-    "@nx/js": "20.5.0",
-    "@nx/web": "20.5.0",
-    "@nx/workspace": "20.5.0",
-    "@schematics/angular": "19.2.9",
+    "@nx/angular": "21.2.0",
+    "@nx/cypress": "21.2.0",
+    "@nx/eslint": "21.2.0",
+    "@nx/eslint-plugin": "21.2.0",
+    "@nx/jest": "21.2.0",
+    "@nx/js": "21.2.0",
+    "@nx/web": "21.2.0",
+    "@nx/workspace": "21.2.0",
+    "@schematics/angular": "20.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "30.0.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "8.37.0",
-    "angular-eslint": "19.8.1",
-    "cypress": "^13.13.0",
+    "angular-eslint": "20.0.0",
+    "cypress": "14.5.2",
     "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-cypress": "^3.5.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "14.4.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-preset-angular": "14.6.1",
     "lighthouse": "^12.2.1",
-    "nx": "20.5.0",
+    "nx": "21.2.0",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "stylus": "^0.0.1-security",
+    "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "5.7.3",
+    "typescript": "5.8.3",
     "typescript-eslint": "8.37.0"
   }
 }
